--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://williamdlm.github.io/moveit/",
   "name": "moveit-next",
   "version": "0.1.0",
   "private": true,
@@ -11,5 +12,12 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "gh-pages": "^3.1.0",
+    "typescript": "^4.1.5"
   }
 }
